<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_panel"
    tools:context=".DashboardActivity">


    <Button
        android:id="@+id/preferenceBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:fontFamily="serif"
        android:text="JOB PREFS"
        app:layout_constraintEnd_toStartOf="@+id/historyBtn"
        app:layout_constraintTop_toBottomOf="@+id/allJobsBtnDB" />

    <Button
        android:id="@+id/backBtnDB"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="93dp"
        android:fontFamily="serif"
        android:text="LOGOUT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/payEmpBtnDB"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="serif"
        android:text="UPDATE CARD INFO"
        app:layout_constraintEnd_toStartOf="@+id/backBtnDB"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="serif"
        android:text="HISTORY"
        app:layout_constraintEnd_toStartOf="@+id/acceptedJobsBtn"
        app:layout_constraintTop_toBottomOf="@+id/preferenceBtn" />

    <Button
        android:id="@+id/acceptedJobsBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:fontFamily="serif"
        android:text="ACCEPTED JOBS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyBtn" />

    <Button
        android:id="@+id/postJobBtnDB"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="230dp"
        android:fontFamily="serif"
        android:text="POST JOB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/allJobsBtnDB"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:fontFamily="serif"
        android:text="ALL JOBS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postJobBtnDB" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="262dp"
        android:layout_height="422dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trigger" />

</androidx.constraintlayout.widget.ConstraintLayout>