<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/employeeAccount"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint=" Input Employee Email Account Here"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/totalHours"
        android:layout_width="157dp"
        android:layout_height="38dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="Total Hours"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/generatedTotalPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/salaryPerHour"
        app:layout_constraintTop_toBottomOf="@+id/employeeBankAccount" />

    <EditText
        android:id="@+id/employeeBankAccount"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="494dp"
        android:ems="10"
        android:hint="Input Employee Payment Account Here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/paymentSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeAccount" />

    <EditText
        android:id="@+id/salaryPerHour"
        android:layout_width="162dp"
        android:layout_height="38dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="Salary/Hour"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeBankAccount" />

    <EditText
        android:id="@+id/totalPayment"
        android:layout_width="156dp"
        android:layout_height="39dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Total Payment:"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/generatedTotalPayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryPerHour" />

    <EditText
        android:id="@+id/generatedTotalPayment"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalPayment"
        app:layout_constraintTop_toBottomOf="@+id/totalHours" />
</androidx.constraintlayout.widget.ConstraintLayout>
