...
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/history"
    tools:context=".MainActivity"
    android:background="@drawable/wood_panel"
    >

    <LinearLayout
        android:layout_width="match_parent"
...
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical"></LinearLayout>

                <Button
                    android:id="@+id/historyBackToDBBtn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginBottom="100dp"
                    android:fontFamily="serif"
...
